<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/apNam"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/apNam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/log"
            android:text="EasyPizza"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#3090C7"
            android:textSize="30dp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/apNam"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/apNam"
            android:text="Merchant"
            android:textColor="#3090C7"
            android:textStyle="italic|bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/OrderCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Order code" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/CustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/customer" />

        <EditText
            android:id="@+id/orderSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ordsum" />

        <EditText
            android:id="@+id/merchantTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time" />

        <EditText
            android:id="@+id/BillAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bilamo"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/DelivMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/delivmobnum"
            android:inputType="number" />

        <EditText
            android:id="@+id/Loco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/cust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:text="Create order"
            android:textColor="#3090C7"
            android:textSize="20dp"
            android:textStyle="italic|bold" />
    </LinearLayout>

</RelativeLayout>